[gd_scene load_steps=11 format=3 uid="uid://c37otjyjx62pp"]

[ext_resource type="Script" path="res://screens/home_screen.gd" id="1_jjxqv"]
[ext_resource type="PackedScene" uid="uid://cpj3ktsvpuugf" path="res://screens/tabs/focus_tab.tscn" id="2_atg77"]
[ext_resource type="PackedScene" uid="uid://d4a41pp57pva4" path="res://screens/tabs/settings_tab.tscn" id="2_g2bml"]
[ext_resource type="PackedScene" uid="uid://bhjschdcxwhq4" path="res://screens/tabs/diary_tab.tscn" id="3_0ea5u"]
[ext_resource type="PackedScene" uid="uid://c4xo2kdn6f0sy" path="res://screens/tabs/activity_tab.tscn" id="3_37p4l"]
[ext_resource type="Script" path="res://screens/tabs/activity_tab.gd" id="4_exiww"]
[ext_resource type="PackedScene" uid="uid://dpe7bpjdkyet6" path="res://screens/tabs/todo_list_tab.tscn" id="5_74fys"]
[ext_resource type="PackedScene" path="res://screens/tabs/ledger_tab.tscn" id="6_5cyvq"]
[ext_resource type="Script" path="res://screens/tabs/ledger_tab.gd" id="7_jcb4e"]
[ext_resource type="PackedScene" uid="uid://db618p0kses8d" path="res://screens/tabs/health_tab.tscn" id="8_pbbql"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jjxqv")
metadata/_edit_lock_ = true

[node name="HomeScreen" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 648.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="CenterContainer" parent="HomeScreen"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 648.0
offset_bottom = 989.0
size_flags_vertical = 3

[node name="FocusTab" parent="HomeScreen/TabContainer" instance=ExtResource("2_atg77")]
unique_name_in_owner = true
layout_mode = 2
offset_left = 124.0
offset_top = 282.0
offset_right = 524.0
offset_bottom = 707.0

[node name="ActivityTab" parent="HomeScreen/TabContainer" instance=ExtResource("3_37p4l")]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 241.0
offset_top = 481.0
offset_right = 406.0
offset_bottom = 507.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("4_exiww")

[node name="TodoListTab" parent="HomeScreen/TabContainer" instance=ExtResource("5_74fys")]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 240.0
offset_top = 481.0
offset_right = 407.0
offset_bottom = 507.0

[node name="LedgerTab" parent="HomeScreen/TabContainer" instance=ExtResource("6_5cyvq")]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 241.0
offset_top = 481.0
offset_right = 406.0
offset_bottom = 507.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("7_jcb4e")

[node name="HealthTab" parent="HomeScreen/TabContainer" instance=ExtResource("8_pbbql")]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 241.0
offset_top = 481.0
offset_right = 406.0
offset_bottom = 507.0
grow_horizontal = 1
grow_vertical = 1

[node name="DiaryTab" parent="HomeScreen/TabContainer" instance=ExtResource("3_0ea5u")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2i(512, 0)
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 68.0
offset_top = 82.0
offset_right = 580.0
offset_bottom = 907.0
grow_horizontal = 1
grow_vertical = 1

[node name="SettingsTab" parent="HomeScreen/TabContainer" instance=ExtResource("2_g2bml")]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 258.0
offset_top = 353.0
offset_right = 390.0
offset_bottom = 636.0

[node name="ButtomNavigationBar" type="HBoxContainer" parent="HomeScreen"]
layout_mode = 2
offset_top = 993.0
offset_right = 648.0
offset_bottom = 1024.0
alignment = 1

[node name="FocusButton" type="Button" parent="HomeScreen/ButtomNavigationBar"]
layout_mode = 2
offset_left = 109.0
offset_right = 162.0
offset_bottom = 31.0
text = "Focus"

[node name="ActivityButton" type="Button" parent="HomeScreen/ButtomNavigationBar"]
layout_mode = 2
offset_left = 166.0
offset_right = 232.0
offset_bottom = 31.0
text = "Activity"

[node name="TodoListButton" type="Button" parent="HomeScreen/ButtomNavigationBar"]
layout_mode = 2
offset_left = 236.0
offset_right = 283.0
offset_bottom = 31.0
text = "Todo"

[node name="LedgerButton" type="Button" parent="HomeScreen/ButtomNavigationBar"]
layout_mode = 2
offset_left = 287.0
offset_right = 348.0
offset_bottom = 31.0
text = "Ledger"

[node name="HealthButton" type="Button" parent="HomeScreen/ButtomNavigationBar"]
layout_mode = 2
offset_left = 352.0
offset_right = 412.0
offset_bottom = 31.0
text = "Health"

[node name="DiaryButton" type="Button" parent="HomeScreen/ButtomNavigationBar"]
layout_mode = 2
offset_left = 416.0
offset_right = 465.0
offset_bottom = 31.0
text = "Diary"

[node name="SettingsButton" type="Button" parent="HomeScreen/ButtomNavigationBar"]
layout_mode = 2
offset_left = 469.0
offset_right = 539.0
offset_bottom = 31.0
text = "Settings"

[connection signal="pressed" from="HomeScreen/ButtomNavigationBar/FocusButton" to="." method="_on_focus_button_pressed"]
[connection signal="pressed" from="HomeScreen/ButtomNavigationBar/ActivityButton" to="." method="_on_activity_button_pressed"]
[connection signal="pressed" from="HomeScreen/ButtomNavigationBar/TodoListButton" to="." method="_on_todo_list_button_pressed"]
[connection signal="pressed" from="HomeScreen/ButtomNavigationBar/LedgerButton" to="." method="_on_ledger_button_pressed"]
[connection signal="pressed" from="HomeScreen/ButtomNavigationBar/HealthButton" to="." method="_on_health_button_pressed"]
[connection signal="pressed" from="HomeScreen/ButtomNavigationBar/DiaryButton" to="." method="_on_diary_button_pressed"]
[connection signal="pressed" from="HomeScreen/ButtomNavigationBar/SettingsButton" to="." method="_on_settings_button_pressed"]
